[metadata]
name = pyloan
version = 0.0.1.6
author = Da.Ki.X
author_email = dakix@protonmail.com
description = A small package for (mortgage) loan calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudo-dakix/pyloan
project_urls =
    Bug Tracker = https://github.com/sudo-dakix/pyloan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
