[metadata]
name = pyloan
version = 0.3.5
author = Da.Ki.X
author_email = dakix@protonmail.com
description = A package for mortgage/loan calculations.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sudo-dakix/pyloan
project_urls =
    Bug Tracker = https://github.com/sudo-dakix/pyloan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    python-dateutil

[options.packages.find]
where = src
